--- a/sass/index_landB.scss
+++ b/sass/index_landB.scss
@@ -67,7 +67,10 @@ body {
         font-size: 2.5vh;
 //        line-height: 2.5rem;
         line-height: 4.8vh;
-        text-shadow: 1px 1px 1px white, -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white;
+//        text-shadow: 1px 1px 1px white, -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white;
+        text-shadow: 1px 1px 2px rgba(255,255,255,0.3)
+, -1px 1px 2px rgba(255,255,255,0.3), 1px -1px 2px rgba(255,255,255,0.3), -1px -1px 2px rgba(255,255,255,0.3);
+        margin: 1vh 0;
     }
 }
 
@@ -354,6 +357,7 @@ body {
 }
 
 .chapterNav {
+//    display: none;
     transition: 1s ease-in 2.5s;
     position: absolute;
     text-align: center;
@@ -462,7 +466,7 @@ body {
     line-height: 3rem;
     font-weight: bold;
     color: black;
-    text-shadow: 1px 1px 2px gray,-1px -1px 1px gray;
+    text-shadow: 2px 2px 2px gray,-2px -2px 2px gray,-2px 2px 2px gray,2px -2px 2px gray;
     &::before {
         border-left: 2px solid black;
         position: absolute;
